# vfkaps_pi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Plugin.cmake  README.md  config.h.in  vfkaps.fbp
build-deps/: control
ci/: appveyor.bat
cmake/: TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.vfkaps.yaml
manual/: antora.yml  site.yml
manual/modules/ROOT/pages/: index.adoc
manual/vfkaps/modules/ROOT/pages/: vfkaps.adoc
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  ca.po  ca_ES.po  cs.po  cs_CZ.po  da.po  da_DK.po  de.po  de_DE.po  el.po  el_GR.po  es.po  es_ES.po  et.po  et_EE.po  fi.po  fi_FI.po  fr.po  fr_FR.po  gl.po  gl_ES.po  hu.po  hu_HU.po  it.po  it_IT.po  ja.po  ja_JP.po  nb.po  nb_NO.po  nl.po  nl_NL.po  pl.po  pl_PL.po  pt.po  pt_BR.po  pt_PT.po  ru.po  ru_RU.po  (+9 more)
src/: NavFunc.cpp  NavFunc.h  icons.cpp  icons.h  ocpn_plugin.h  tinyxml.cpp  tinyxml.h  version.h  vfkapsOverlayFactory.cpp  vfkapsOverlayFactory.h  vfkaps_pi.cpp  vfkaps_pi.h  vfkapsgui.cpp  vfkapsgui.h  vfkapsgui_impl.cpp  vfkapsgui_impl.h
